Loading javascript from app.js instead of embedded

--- a/public/index.html
+++ b/public/index.html
@@ -29,96 +29,5 @@
     <button id="stop-song">Stop</button>
   </div>
 </body>
-<script>
-  var songBuffer = null;
-  var songSource = null;
-  var songAnalyser = null;
-  var songContext = new webkitAudioContext();
-  var freqByteData = new Uint8Array();
-
-  function loadSong(url) {
-    var request = new XMLHttpRequest();
-    request.open('GET', url, true);
-    request.responseType = 'arraybuffer';
-
-    // Decode asynchronously
-    request.onload = function() {
-      songContext.decodeAudioData(request.response, function(buffer) {
-        songBuffer = buffer;
-      }, function(e) { console.log(e); });
-    }
-    request.send();
-  }
-
-  function playSong(buffer) {
-    songSource = songContext.createBufferSource();
-    songAnalyser = songContext.createAnalyser();
-    songAnalyser.fftSize = 1024;
-
-    songSource.buffer = buffer;
-    songSource.connect(songAnalyser);
-    songAnalyser.connect(songContext.destination);
-    songSource.noteOn(0);
-
-    freqByteData = new Uint8Array(songAnalyser.frequencyBinCount);
-    animate();
-  }
-  
-  function stopSong() {
-    songSource.noteOff(0);
-  }
-
-  // Cross browser setup for animation frame requests
-  window.requestAnimFrame = (function(callback) {
-    return window.requestAnimationFrame
-      || window.webkitRequestAnimationFrame
-      || window.mozRequestAnimationFrame
-      || window.oRequestAnimationFrame
-      || window.msRequestAnimationFrame
-      || function(callback) { window.setTimeout(callback, 1000 / 60); }
-  })();
-
-  // Canvas and context
-  var treatCanvas = document.getElementById('treat');
-  var context = treatCanvas.getContext('2d');
-  context.canvas.width = window.innerWidth;
-  context.canvas.height = window.innerHeight;
-
-  // Called every frame
-  function animate() {
-    // Clear canvas
-    context.clearRect(0, 0, treatCanvas.width, treatCanvas.height);
-
-    // Get song data
-    songAnalyser.smoothingTimeConstant = 0.1;
-    songAnalyser.getByteFrequencyData(freqByteData);
-
-    // Colors for treat
-    var color0 = '#44bb44';
-    var color1 = '#bb4480';
-    var color2 = '#8044bb';
-
-    context.beginPath();
-    for (var i = 0; i < freqByteData.length; i++) {
-      var height = freqByteData[i];
-      context.arc(context.canvas.width / 300 * i, context.canvas.height / 2,
-        height, 0, 2 * Math.PI, false);
-    }
-    context.fillStyle = color0;
-    context.fill();
-
-    // Request new animation frame
-    requestAnimFrame(function() {
-      animate();
-    });
-
-  }
-
-  $(function() {
-    loadSong('music/polygons.mp3');
-    $('#play-song').click(function() { playSong(songBuffer) });
-    $('#stop-song').click(function() { stopSong() });
-  });
-
-</script>
+<script src="app.js"></script>
 </html>
