--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+  <title>Treats for Beats | Audio Visualizations</title>
+  <link rel="stylesheet" href="ss/app.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
   </script>
   <style>
@@ -8,6 +10,9 @@
       width: 100%;
       height: 100%;
       margin: 0px;
+    }
+    #browser-warning {
+      display:none;
     }
     canvas {
       z-index: 0;
@@ -23,11 +28,18 @@
   </style>
 </head>
 <body>
-  <canvas id="treat"></canvas>
-  <div id="controls">
-    <button id="play-song">Play</button>
-    <button id="stop-song">Stop</button>
+  <div id="browser-warning">
+    <h1>The HTML5 Audio API currently only works with Chrome, Safari,
+    and the Firefox nightly builds. Sorry!</h1>
+  </div>
+  <div id="treat-container">
+    <canvas id="treat"></canvas>
+    <div id="controls">
+      <button id="play-song">Play</button>
+      <button id="stop-song">Stop</button>
+    </div>
   </div>
 </body>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
+<script>require('initialize');</script>
 </html>
