Added second canvas and rotated both with shadow
Added a second canvas drawn in purple. Rotated both canvases so as to
appear that they are crossing in the middle and slight angled in. Added
drop shadow effect to drawn elements.

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -11,6 +11,7 @@
   </div>
   <div id="treat-container">
     <canvas id="treat"></canvas>
+    <canvas id="treat2"></canvas>
     <div id="controls">
       <button id="play-song">Play</button>
       <button id="stop-song">Stop</button>
