Variable naming and animation code cleanup
Added a `1` to first treat canvas id and variable names. Refactored code
that sets canvas width and height. Refactored bubble animation drawing
code to use variables and less code in one loop again.

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -14,8 +14,8 @@
       <button id="play-song">Play</button>
       <button id="stop-song">Stop</button>
     </div>
-    <canvas id="treat"></canvas>
     <canvas id="treat2"></canvas>
+    <canvas id="treat1"></canvas>
   </div>
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js">
