--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -13,9 +13,27 @@
     <div id="controls">
       <button id="play-song">Play</button>
       <button id="stop-song">Stop</button>
+      <button id="find-song" data-toggle="modal" data-target="#myModal">Find a Song</button>
     </div>
     <canvas id="treat2"></canvas>
     <canvas id="treat1"></canvas>
+    <div class="modal fade" id="#myModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            <p>One fine body&hellip;</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
   </script>
