Drop down to one canvas with one bubble in the middle

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -14,8 +14,7 @@
       <button id="play-song">Play</button>
       <button id="stop-song">Stop</button>
     </div>
-    <canvas id="treat2"></canvas>
-    <canvas id="treat1"></canvas>
+    <canvas id="treat"></canvas>
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
   </script>
